// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1display portfolio reducer FETCH_PORTFOLIO_FAILURE returns expected state 1`] = `
Object {
  "error": "Error: msg",
}
`;

exports[`1display portfolio reducer FETCH_PORTFOLIO_REQUEST returns expected state 1`] = `
Object {
  "fetching": 1,
}
`;

exports[`1display portfolio reducer FETCH_PORTFOLIO_SUCCESS returns expected state 1`] = `
Object {
  "items": Object {
    "data": 1,
  },
}
`;

exports[`1display portfolio reducer initial state is correct 1`] = `Object {}`;
